@@ -1,6 +1,12 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
 *eix-0.30.1
+	Martin Väth <martin at mvath.de>:
+	- Add maskreason to --xml output
+	- Update email
+	- internal: remove redundant ATTRIBUTE_NONNULL
+	- contrib/make.sh: Fix ccache handling
+
 *eix-0.30.0
 	Martin Väth <martin at mvath.de>:
 	- Introduce {mainrepo} attribute; "Find open bugs" only for those, see
